# orbit-tessellation

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: deployment.yml  tests.yml
docs/: gen_ref_pages.py  index.md  installation.md  requirements.txt
docs/about/: algorithm.md  index.md  installation.md  motivation.md  usage.md
docs/dev/: contributing.md  index.md
docs/reference/: index.md
docs/stylesheets/: extra.css
docs/user/: index.md  introduction.md
docs/user/tutorials/: agama_examples.md  gala_examples.md  galpy_examples.md
src/tessellation/: __init__.py  base.py  constructor.py  dim2.py  dim3.py  exceptions.py  generic.py
tests/: test_tessellation.py
