[project]
name = "orbit-tessellation"
version = "0.1.1"
description = "A Python package for evaluating orbit commensurability using Delaunay tessellation."
authors = [
    {name = "ilikecubesnstuff", email = "subho1618@gmail.com"},
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.5.1",
]
