[project]
name = "orbit-tessellation"
version = "0.1.3"
description = "A Python package for evaluating orbit commensurability using Delaunay tessellation."
authors = [
    {name = "ilikecubesnstuff", email = "subho1618@gmail.com"},
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.9.3",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/ilikecubesnstuff/orbit-tessellation"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.5.1",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.2.8",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
