[project]
name = "orbit-tessellation"
version = "0.2.0"
description = "A Python package for evaluating orbit commensurability using Delaunay tessellation."
authors = [
    { name = "ilikecubesnstuff", email = "subho1618@gmail.com" },
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.9.3",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/ilikecubesnstuff/orbit-tessellation"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7.2",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.5.1",
    "pytest>=7.4.4",
]
